Added path to the README the path to the presentation slides, Removed some temp files, and pdated the links in the presentation

--- a/README.org
+++ b/README.org
@@ -1,3 +1,5 @@
 #+title: Readme
 
+Presentation slides from Texas Cyber Summit located under techniques/injectionTechniques/presentationTexasCyber/
+
 Will be creating detection content here
